# ft_turing

./: .gitignore  Makefile  README.md  build.sh  ft_turing.opam  main.ml
machines/: inputmtu.txt  ispair.json  unary_add.json
src/: evaluate.ml  main.ml  parsing.ml  parsing.mli  print.ml
test/: t_parsing.ml
test/machines/: 0n1n.json  is_palindrome.json  ispair.json  unary_add.json  utmlike.json
