opam-version: "2.0"
synopsis: "Ft_turing"
description: "This program simulates the Turing machine"
maintainer: ["jle-corr"]
authors: ["jle-corr"]
license: "GPL-3.0-or-later"
homepage: "https://github.com/Jibus22/ft_turing"
bug-reports: "https://github.com/Jibus22/ft_turing/issues"
depends: [
	"ocaml" {>= "5.2.0"}
	"yojson"
	"alcotest" {with-test}
	"odoc" {with-dev}
]
